<resources>
    <string name="app_name">HistroyRecordDemo</string>

    <string name="skip_login">跳过登录></string>
    <string name="merchant_code">商户代码</string>
    <string name="account_code">账号</string>
    <string name="pwd">密码</string>
    <string name="remember_pwd">记住密码</string>
    <string name="login_note">注：可使用游戏平台账号登录</string>
    <string name="login">登录</string>
    <string name="login_help_content">商户代码为您注册账号时所登录平台的代码，可以前往相应平台联系客服索取。</string>
    <string name="know">我知道了</string>
    <string name="help">"帮助"</string>
</resources>
