<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_help_shape"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="@color/update_line_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:lineSpacingExtra="6dp"
        android:padding="20dp"
        android:text="@string/login_help_content"
        android:textColor="@color/login_help_content_color"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/update_line_color" />


    <TextView
        android:id="@+id/tv_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/login_help_bottom_shape"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/know"
        android:textColor="@color/bottom_menu_login_change_button"
        android:textSize="18sp" />


</LinearLayout>