<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_skip_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="30dp"
        android:padding="5dp"
        android:text="@string/skip_login"
        android:textColor="@color/bottom_menu_login_change_button"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@mipmap/app_icon"
            android:contentDescription="@null" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableBottom="@drawable/edittext_line_bg"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:hint="@string/merchant_code"
                android:singleLine="true"
                android:textSize="15sp" />

            <ImageButton
                android:id="@+id/ib_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/denglu_help"
                android:padding="8dp" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableBottom="@drawable/edittext_line_bg"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:hint="@string/account_code"
                    android:singleLine="true"
                    android:textSize="15sp" />

                <FrameLayout
                    android:id="@+id/fl_record"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginEnd="5dp"
                    android:padding="8dp">

                    <ImageButton
                        android:id="@+id/ib_record"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/denglu_xia"
                        android:padding="5dp" />
                </FrameLayout>

            </FrameLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableBottom="@drawable/edittext_line_bg"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:hint="@string/pwd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >

            <CheckBox
                android:id="@+id/cb_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_pwd"
                android:textColor="@android:color/black"
                android:textSize="14sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/bottom_menu_login_bg"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text=""
            android:textColor="@color/login_tip_color"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
